--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,45 @@
-node_modules
+# Dependencies
+node_modules/
+.pnp/
+.pnp.cjs
+
+# Next.js
+.next/
+out/
+next-env.d.ts
+
+# Build output
+dist/
+build/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Env files
+.env
+.env.*
+!.env.example
+
+# OS/filesystem
+.DS_Store
+Thumbs.db
+
+# Editor/IDE
+.vscode/
+.idea/
+
+# Testing/coverage
+coverage/
+
+# Misc caches
+.cache/
+.turbo/
+
+# Vercel/Deploy
+.vercel/
+
+# Typescript
+*.tsbuildinfo
